# diploma-fractal-renderer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLIsts.txt  fractal_app.cpp  fractal_app.h  settings_manager.cpp  settings_manager.h
src/app/ui/: CMakeLists.txt  fractal_window.cpp  fractal_window.h  input_controller.cpp  input_controller.h  renderer_widget.cpp  renderer_widget.h  settings_widget.cpp  settings_widget.h  texture_target.cpp  texture_target.h
src/render/: CMakeLists.txt  fractals.h  renderer.h  settings_provider.h  texture_target.cpp  texture_target.h  utils.h
src/render/common/: CMakeLists.txt  coloring.h  fractals.h  types.h  utils.h
src/render/cpu/: CMakeLists.txt  cpu_renderer.cpp  cpu_renderer.h
src/render/cuda/: CMakeLists.txt  cuda_renderer.cu  cuda_renderer.h  utils.cu  utils.h
src/ui/: CMakeLists.txt  fractal_window.cpp  fractal_window.h  renderer_widget.cpp  renderer_widget.h
